src/index.css
@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");

/* #region RESET */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

ul {
  list-style: none;
}

a {
  text-decoration: none;
}

/* #endregion RESET */

/* #region GENERIC */
:root {
  --primary-color: #01ABAA;
  --secondary-color: #5DD19A;
  --tertiary-color: #8DE18B;
  --btn-color: #C1EE7B;
  --main-text-color: #664b41;
}

body {
  font-family: sans-serif;
  color: var(--main-text-color);
  font-family: "Quicksand";
  font-weight: 500;
}

.app {
  width: 100%;
  height: 100vh;
}

h1 {
  text-align: center;
  background-color: var(--primary-color);
  font-family: "Monoton";
  font-size: 5rem;
  text-transform: uppercase;
  font-weight: 400;
  letter-spacing: -5px;
  padding: 1.4rem 0;
}

button,
select,
input {
  background-color: var(--btn-color);
  color: inherit;
  font-family: inherit;
  border: none;
  border-radius: 4rem;
  padding: .625rem 1rem;
  font-weight: 700;
  cursor: pointer;
}

/* #endregion GENERIC */

/* #region FORM */
.add-items {
  background-color: var(--secondary-color);
  padding: 1.4rem 1rem;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.8rem;
}

.add-items button {
  background-color: var(--primary-color);
  text-transform: uppercase;
}

/* #endregion FORM */

/* #region ITEMS */
.items-list {
  background-color: var(--tertiary-color);
  height: calc(100vh - 10.625rem - 5.25rem - 1.66rem - 7.625rem);
  overflow-y: auto;
  display: flex;
  justify-content: center;

  ul {
    display: flex;
    justify-content: start;
    align-items: center;
    flex-wrap: wrap;
    padding: 1rem 1.4rem;
    width: 80%;

    li {
      width: 50%;
      display: flex;
      align-items: center;
      gap: 1rem;
      padding-bottom: 10px;

      button {
        cursor: pointer;
        background: none;
        border: none;
        font-size: 1rem;
        padding: .25rem;
        transform: translateY(2px);
      }

      label {
        display: flex;
        align-items: center;
      }
    }
  }

  input[type="checkbox"] {
    height: 1rem;
    width: 1rem;
    accent-color: var(--primary-color);
    margin-right: 10px;
  }
}

.actions {
  background-color: var(--tertiary-color);
  text-align: center;
  padding: 0 2.4rem 1rem 2.4rem;
  font-size: 1.4rem;
  font-weight: 700;

  button {
    background-color: var(--primary-color);
    margin-left: 1rem;
  }

  button,
  select {
    text-transform: uppercase;
  }
}


/* #endregion ITEMS */

/* #region STATISTICS */
.stats {
  background-color: var(--primary-color);
  text-align: center;
  font-weight: 700;
  padding: 2.3rem 0;
}

/* #endregion STATISTICS */

